Home page now shows results in a table with pagination. Logout was also implemented :)

--- a/templates/login.html
+++ b/templates/login.html
@@ -35,12 +35,24 @@
 
             <!-- Right: Login Form -->
             <div class="col-md-8 d-flex align-items-center justify-content-center" style="height: 100vh;">
-                <div class="d-flex flex-column gap-4">
-                    <div class="text-center">
 
+                <div class="d-flex flex-column gap-4">
+
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} alert-dismissible fade show">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+                    {% endwith %}
+
+                    <!-- Logos -->
+                    <div class="text-center">
                         <div class="d-flex align-items-center justify-content-center gap-3 my-4">
-                            <i class="ph ph-atom display-4"
-                            style="color:#1F2024";></i>
+                            <i class="ph ph-atom display-4" style="color:#1F2024" ;></i>
                             <h2 style="font-weight:semi-bold;
                                         color:#1F2024;">+</h2>
                             <img src="static/imgs/unison-logo.svg" alt="Unison Logo" style="height: 48px;">
@@ -56,12 +68,12 @@
                         </p>
                     </div>
 
-                    <form method="post" 
-                    action="{{ url_for('login') }}"
-                    class="d-flex flex-column gap-3">
-                        <input type="text" class="form-control" id="username" placeholder="Usuario" name="username" required class="form-control">
+                    <form method="post" action="{{ url_for('login') }}" class="d-flex flex-column gap-3">
+                        <input type="text" class="form-control" id="username" placeholder="Usuario" name="username"
+                            required class="form-control">
 
-                        <input type="password" class="form-control" id="password" placeholder="Contraseña" name="password" required class="form-control">
+                        <input type="password" class="form-control" id="password" placeholder="Contraseña"
+                            name="password" required class="form-control">
 
                         <div class="d-grid">
                             <button type="submit" class="btn btn-primary py-2 mt-4" style="background-color: #1F2024;
