Users can now sarch catalogs

--- a/templates/area.html
+++ b/templates/area.html
@@ -85,7 +85,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Título</th>
                     <th scope="col">Área</th>
-                    <th scope="col">Categoría</th>
+                    <th scope="col">Catálogo</th>
                     <th scope="col">Editorial</th>
                     <th scope="col">ISSN</th>
                     <th scope="col">Tipo</th>
@@ -97,7 +97,7 @@
                     <th scope="row">{{ magazine.h_index }}</th>
                     <td><a href="/magazine/{{ magazine.h_index }}">{{ magazine.title }}</a></td>
                     <td><a href="/area/{{ magazine.area }}">{{ magazine.area }}</a></td>
-                    <td><a href="/category/{{ magazine.category }}">{{ magazine.category }}</a></td>
+                    <td><a href="/catalog/{{ magazine.catalog }}">{{ magazine.catalog }}</a></td>
                     <td>{{ magazine.publisher }}</td>
                     <td>{{ magazine.issn }}</td>
                     <td>{{ magazine.publication_type }}</td>
