Magazines now have their own page based on theor h-index

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -96,7 +96,7 @@
                 <tr>
                     <th scope="row">{{ magazine.h_index }}</th>
                     <td><a href="/magazine/{{ magazine.h_index }}">{{ magazine.title }}</a></td>
-                    <td><a href="/catalog/{{ magazine.catalog }}">{{ magazine.catalog }}</a></td>
+                    <td><a href="/area/{{ magazine.area }}">{{ magazine.area }}</a></td>
                     <td><a href="/catalog/{{ magazine.catalog }}">{{ magazine.catalog }}</a></td>
                     <td>{{ magazine.publisher }}</td>
                     <td>{{ magazine.issn }}</td>
