--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 
 <style>
     .card-img-top {
-        height: 200px; 
+        height: 200px;
         object-fit: cover;
     }
 </style>
@@ -13,16 +13,20 @@
 <div class="container-fluid text-center">
     <div class="row justify-content-center">
         <div class="col-lg-8">
-            <h1 class="mb-4">Sobre Nosotros</h1>
-            <p class="text-center">Sci-Archive es una herramienta diseñada para estudiantes, investigadores y docentes que buscan explorar y
+            <h1 class="mb-4" style="color: #253667;">Sobre Nosotros</h1>
+            <p class="text-center">Sci-Archive es una herramienta diseñada para estudiantes, investigadores y docentes
+                que buscan explorar y
                 consultar revistas científicas de calidad.</p>
 
-            <p class="text-center">Aquí podrás navegar por áreas del conocimiento, catálogos reconocidos y títulos específicos, accediendo a
+            <p class="text-center">Aquí podrás navegar por áreas del conocimiento, catálogos reconocidos y títulos
+                específicos, accediendo a
                 información clave como su índice H, editorial, tipo de publicación y más.
-                Nuestro objetivo es facilitar el acceso al conocimiento académico y fomentar la investigación en la comunidad
+                Nuestro objetivo es facilitar el acceso al conocimiento académico y fomentar la investigación en la
+                comunidad
                 universitaria.</p>
             <p class="text-center">
-                Este proyecto ha sido desarrollado como parte de una asignatura en la Licenciatura en Ingeniería en Sistemas de
+                Este proyecto ha sido desarrollado como parte de una asignatura en la Licenciatura en Ingeniería en
+                Sistemas de
                 Información de la Universidad de Sonora, con el propósito de aplicar tecnologías web y habilidades de
                 programación en un entorno académico real.</p>
 
@@ -32,43 +36,43 @@
 
     <!-- Team Information-->
     <div>
-        <h3 class="mb-4">Conoce Nuestro Equipo</h3>
+        <h3 class="mb-4" style="color: #253667;">Conoce Nuestro Equipo</h3>
 
-    <div class="row justify-content-center gap-4">
-        <div class="col-auto">
-            <div class="card " style="width: 18rem;">
-                <img src="https://www.shutterstock.com/shutterstock/videos/1049192989/thumb/1.jpg?ip=x480"
-                    class="card-img-top" alt="Foto de perfil">
-                <div class="card-body">
-                    <h5 class="card-title">Verónica Rodríguez</h5>
+        <div class="row justify-content-center gap-4 mb-5">
+            <div class="col-auto">
+                <div class="card " style="width: 18rem;">
+                    <img src="https://www.shutterstock.com/shutterstock/videos/1049192989/thumb/1.jpg?ip=x480"
+                        class="card-img-top" alt="Foto de perfil">
+                    <div class="card-body">
+                        <h5 class="card-title">Verónica Rodríguez</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-auto">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://static.vecteezy.com/system/resources/thumbnails/047/005/725/small_2x/dog-working-on-laptop-free-photo.jpg"
+                        class="card-img-top" alt="Foto de perfil">
+                    <div class="card-body">
+                        <h5 class="card-title">Alanis Rivera</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-auto">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://media.istockphoto.com/id/1397756029/photo/bengal-cat-in-glasses-works-at-the-table-on-the-computer.jpg?s=612x612&w=0&k=20&c=xbB5PSNre-zTMV6IA1dJCXcOrMVBOXs1p7mnmjgwBZo="
+                        class="card-img-top" alt="Foto de perfil">
+                    <div class="card-body">
+                        <h5 class="card-title">Antonio Hernández</h5>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-auto">
-            <div class="card" style="width: 18rem;">
-                <img src="https://static.vecteezy.com/system/resources/thumbnails/047/005/725/small_2x/dog-working-on-laptop-free-photo.jpg"
-                    class="card-img-top" alt="Foto de perfil">
-                <div class="card-body">
-                    <h5 class="card-title">Alanis Rivera</h5>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-auto">
-            <div class="card" style="width: 18rem;">
-                <img src="https://media.istockphoto.com/id/1397756029/photo/bengal-cat-in-glasses-works-at-the-table-on-the-computer.jpg?s=612x612&w=0&k=20&c=xbB5PSNre-zTMV6IA1dJCXcOrMVBOXs1p7mnmjgwBZo="
-                    class="card-img-top" alt="Foto de perfil">
-                <div class="card-body">
-                    <h5 class="card-title">Antonio Hernández</h5>
-                </div>
-            </div>
-        </div>
     </div>
 
-    </div>
 
-    
 </div>
 
 {% endblock %}
