--- a/templates/login.html
+++ b/templates/login.html
@@ -51,15 +51,14 @@
 
                     <!-- Logos -->
                     <div class="text-center">
-                        <div class="d-flex align-items-center justify-content-center gap-3 my-4">
-                            <i class="ph ph-atom display-4" style="color:#1F2024" ;></i>
+                        <div class="d-flex align-items-center justify-content-center gap-3 my-4"> <i
+                                class="ph ph-atom display-4" style="color:#253667" ;></i>
                             <h2 style="font-weight:semi-bold;
-                                        color:#1F2024;">+</h2>
+                                        color:#253667;">+</h2>
                             <img src="static/imgs/unison-logo.svg" alt="Unison Logo" style="height: 48px;">
                         </div>
-
                         <h1 style="font-weight:semi-bold;
-                            color:#1F2024;">
+                            color:#253667;">
                             Bienvenido a Sci-Archive
                         </h1>
 
@@ -75,8 +74,7 @@
                         <input type="password" class="form-control" id="password" placeholder="Contraseña"
                             name="password" required class="form-control">
 
-                        <div class="d-grid">
-                            <button type="submit" class="btn btn-primary py-2 mt-4" style="background-color: #1F2024;
+                        <div class="d-grid"> <button type="submit" class="btn btn-primary py-2 mt-4" style="background-color: #253667;
                                     border: none;">
                                 Iniciar Sesión
                             </button>
