--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         }
 
         .navbar-custom {
-            background-color: #1F2024;
+            background-color: #253667;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
         }
